:ambulance: fixed images not showing in cards

--- a/public/styles/sass/style.sass
+++ b/public/styles/sass/style.sass
@@ -44,8 +44,10 @@ body
     list-style: none
     display: flex
     justify-content: space-evenly
+    flex-wrap:  wrap
     
 .card 
+  margin: 10px
   min-width: 480px
   min-height: 300px
   border-radius: 20px
